build: ts alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "noUnusedParameters": true,
     "skipLibCheck": true,
     "paths": {
-      "@/*": ["./src"]
+      "@/*": ["./src/*"]
     }
   },
   "include": ["./src/**/*", "./tests/**/*"],
