--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "prebuild": "rm -rf ./dist",
     "build": "parcel build ./src/index.html --public-url \"./\" --no-source-maps"
   },
+  "alias": {
+    "@/*": "./src/$1"
+  },
   "devDependencies": {
     "@types/jest": "^27.0.3",
     "@types/react": "^17.0.37",
@@ -22,7 +25,9 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "ace-builds": "^1.4.13",
     "react": "^17.0.2",
+    "react-ace": "^9.5.0",
     "react-dom": "^17.0.2"
   }
 }
