--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,5 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["./src/**/*", "./tests/**/*"],
-  "exclude": ["node_modules"]
+  "include": ["src/**/*", "tests/**/*"]
 }
