--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "devDependencies": {
     "@types/jest": "^27.0.3",
+    "@types/lodash": "^4.14.186",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "husky": "^7.0.4",
@@ -29,6 +30,7 @@
   },
   "dependencies": {
     "ace-builds": "^1.4.13",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-ace": "^9.5.0",
     "react-dom": "^17.0.2"
